--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-linear-gradient": "2.5.6",
     "react-native-paper": "3.6.0",
     "react-native-reanimated": "~1.13.0",
+    "react-native-responsive-grid": "^0.41.993",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-svg": "12.1.0",
